Fixed icon spacing inside buttons

--- a/src/components/ModalHeader/styles.module.css
+++ b/src/components/ModalHeader/styles.module.css
@@ -4,4 +4,7 @@
 
 .dropdown {
   color: var(--mantine-color-dark-4);
+  :global(.mantine-Button-section) {
+    margin-left: 0;
+  }
 }
